data/derived/sp14/progs/unify/prog4085.ml.out
Characters 52-65:
  0 -> [] | n -> digitsOfInt n/10 :: [];;
                 ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
